# fastapi-example

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/: health.py
app/api/v1/: __init__.py  example.py  login.py  memo.py  memos.py  tags.py  users.py
app/core/: config.py  database.py  logger.py  transaction.py
app/core/exceptions/: base.py  exceptions.py  handler.py
app/core/middlewares/: cors_middleware.py  request_id_middleware.py
app/models/: base.py  memo.py  memos.py  tags.py  users.py
app/repos/: base.py  memo.py  memos.py  tags.py  user.py  users.py
app/schemas/: base.py  memo.py  memos.py  tags.py  user.py  users.py
app/services/: base.py  memo.py  memos.py  security.py  tags.py  user.py  users.py
app/services/base/: base.py  basic.py  user_aware_hook.py
app/usecase/base/: base.py  crud.py
app/usecase/memos/: crud.py
app/usecase/tags/: crud.py
app/usecase/users/: admin.py  crud.py
backend/: run.sh
backend/app/: main.py  router.py
backend/app/core/: config.py  logger.py
backend/init_data/: initial_data.py
backend/migrations/: env.py
backend/migrations/versions/: 20250520_232847_7a6aa282a3fb_init.py  20260126_155206_f726aef40502_init.py
backend/tests/: conftest.py
docker/: Dockerfile  docker-compose.yml  resource.yaml  resource.yml  start.sh  up.sh
docs/for_llm/: guide_about_app.md  guide_about_test.md
example/backend/app/: main.py  router.py
example/backend/app_tests/: conftest.py
example/backend/init_data/: initial_data.py
example/backend/tests/: README.md  conftest.py
init_data/: initial_data.py
migrations/: env.py
migrations/versions/: 33bce2bf8666_init.py  b538e065f96b_init.py
scripts/: create_module.py
src/app/: main.py  router.py
src/app_base/config/: __init__.py  auth.py  config.py  file_storage.py  util.py  vector_db.py
src/app_base/core/: log.py
src/app_base/utils/: time_util.py
src/app_config/: __init__.py  config.py  file_storage.py  util.py  vector_db.py
src/app_kit/ai/: config.py
src/app_kit/core/: config.py  logger.py
src/init_data/: initial_data.py
src/migrations/: env.py
src/tests/test_app/: conftest.py
tests/: conftest.py  pytest.ini
tests/e2e/: conftest.py
tests/fixtures/: __init__.py  auth.py  clients.py  db.py
tests/fixtures/data/: __init__.py  memos.py  tags.py  users.py  workspaces.py
tests/integrate/: conftest.py
tests/integrate/repos/: memos.py
tests/test_services/: test_base.py  test_memo.py
tests/unit/: conftest.py
tests/utils/: __init__.py  assertions.py  helpers.py
tools/: create_module.py
(+424 files in other folders)
