[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "orjson>=3.10.16",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
