[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.11.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "polyfactory>=3.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
log_level="INFO"
pythonpath="backend"
testpaths="tests"
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"

[tool.ruff]
exclude = [".git", ".venv", "migrations"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F403", "E402"]
"__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
